              not by pointer (which used to transfer ownership).
            - Added move constructors and move assignment operators.
            - Added member and global swap() functions.
            - Constructors now check some preconditions and throw exceptions if
              they fail (these checks were previously done during homology()).
        Class GroupExpression:
            - Added move constructors and move assignment operators.
            - Added a constructor that takes a single term, or a single
              generator/exponent pair.
            - Changed the string constructor to throw an exception on error;
              the old optional validity reporting argument is now removed.
            - Added a C-style string constructor.
            - Deprecated addStringFirst() and addStringLast(); just use
              addTermsFirst(string) and addTermsLast(string) instead.
            - New variant of substitute() that can replace all generators
              simultaneously.
            - Functions inverse() and power() now return by value, not pointer.
            - Functions addTermsFirst() and addTermsLast() now take the
              GroupExpression argument by value, not by const reference.
            - Added member and global swap() functions.
            - Renamed toTeX() to tex().  The old name is kept but deprecated.
            - Added more customisation options to writeTextShort(), and
              deprecated writeText() which is now redundant.
            - Now offers utf8() with UTF-8 exponents, as well as str(bool)
              and utf8(bool) that offer the choice of numbered or alphabetic
              generators.
        Class GroupPresentation:
            - New routines enumerateCovers(), incidence() and gap().
            - Added move constructors and move assignment operators.
            - New constructor to create free groups.
            - The vector-of-strings constructor now throws an exception