@@ -48,10 +48,8 @@ void addHandlebody(pybind11::module_& m) {
             return true;
         })
     ;
-    regina::python::add_output(c);
-    // The Handlebody subclass defines its own equality tests, so we
-    // should not just inherit the compare-by-pointer test from Manifold.
     regina::python::add_eq_operators(c);
+    regina::python::add_output(c);
 
     m.def("swap", (void(*)(Handlebody&, Handlebody&))(regina::swap));
 }
