@@ -49,10 +49,8 @@ void addSimpleSurfaceBundle(pybind11::module_& m) {
             &SimpleSurfaceBundle::S2xS1_TWISTED)
         .def_readonly_static("RP2xS1", &SimpleSurfaceBundle::RP2xS1)
     ;
-    regina::python::add_output(c);
-    // The SimpleSurfaceBundle subclass defines its own equality tests, so we
-    // should not just inherit the compare-by-pointer test from Manifold.
     regina::python::add_eq_operators(c);
+    regina::python::add_output(c);
 
     m.def("swap",
         (void(*)(SimpleSurfaceBundle&, SimpleSurfaceBundle&))(regina::swap));
