@@ -147,9 +147,23 @@ dump(t.triangle(0).front())
 dump(t.tetrahedron(0).front())
 dump(t.pentachoron(0).front())
 
+sfsDisc = SFSpace(SFSpace.o2, 0, 1)
+sfsDisc.insertFibre(3,1)
+sfsDisc.insertFibre(4,-3)
+sfsAnnulus = SFSpace(SFSpace.o2, 0, 2)
+sfsAnnulus.insertFibre(2,1)
+sfsAnnulus.insertFibre(5,7)
+
 dump(LensSpace(7,2))
-m = SFSpace(SFSpace.o2, 1); m.insertFibre(3,1); m.insertFibre(4,-3); dump(m)
+dump(sfsDisc)
 dump(SimpleSurfaceBundle(SimpleSurfaceBundle.RP2xS1))
 dump(SnapPeaCensusManifold('x', 101))
 dump(Handlebody(2))
+dump(TorusBundle(0,1,1,0))
+dump(GraphLoop(sfsAnnulus, Matrix2(0,1,-1,2)))
+dump(GraphPair(sfsDisc, sfsDisc, Matrix2(0,1,-1,2)))
+dump(GraphTriple(sfsDisc, sfsAnnulus, sfsDisc, Matrix2(0,1,-1,2), Matrix2(-1,2,-3,5)))
+
+# Try to get our hands on some StandardTriangulation subclasses.
+dump(StandardTriangulation.recognise(Example3.figureEight()))
 
